--- a/index.html
+++ b/index.html
@@ -11,12 +11,9 @@
 
   <nav>
   <a href="index.html">My homepage</a> |
-  <a href ="http://english.visitkorea.or.kr/enu/index.kto#">South Korea</a> |
-  <a href ="https://www.akc.org/dog-breeds/golden-retriever/">Golden Retriever</a> |
-  <a href = "https://www.google.com/maps/place/Bascom+Hall/@43.0751054,-89.4068382,16z/data=!4m5!3m4!1s0x0:0xb59c6d1db2f37c95!8m2!3d43.0752778!4d-89.4041667">Place 1</a> |
-  <a href = "https://www.google.com/maps/place/University+of+Wisconsin-Madison/@43.076592,-89.4124875,15z/data=!4m2!3m1!1s0x0:0xc9e065e091733a64?sa=X&ved=2ahUKEwjBg5Xu2YfpAhVBbs0KHTG2BGYQ_BIwE3oECBgQCA">Place 2</a> |
-  <a href = "https://www.google.com/maps/place/University+of+Wisconsin+Red+Gym/@43.0762558,-89.3984543,15z/data=!4m2!3m1!1s0x0:0x9a020d5ac86f7f0e?sa=X&ved=2ahUKEwjc-5mB2ofpAhXGK80KHRU_CqEQ_BIwCnoECBgQCA">Place 3</a> |
-  <a href = "https://www.google.com/maps/place/Memorial+Union+Terrace/@43.0767396,-89.3997372,15z/data=!4m2!3m1!1s0x0:0x2651c843afd69879?sa=X&ved=2ahUKEwjp-uuN2ofpAhUIVc0KHcSHAnMQ_BIwDHoECBkQCA">Place 4</a>
+  <a href ="SouthKorea.html">South Korea</a> |
+  <a href ="GoldenRetriever.html">Golden Retriever</a> |
+  <a href = "JindoDog.html">Jindo Dog</a>
 </nav>
 <hr>
 
@@ -26,9 +23,10 @@
   
 
   <p>This is my first LIS 351 Website! Please enjoy my website! </p>
-  <p> To introduce myself, I live in South Korea. I can introduce many interesting things but I recommend you to visit this <a href = "http://english.visitkorea.or.kr/enu/index.kto#" target="_blank">website</a>.</p>
+  <p> To introduce myself, I live in South Korea. I can introduce many interesting things but I recommend you to visit this <a href = "file:///C:/Users/jeiju/Desktop/Fall%202020/LIS%20351/Assignment/Lab2/SouthKorea.html">website</a>.</p>
   <p> I really like a dog, and currently have one! </p>
   <p> Her name is Bockgil.</p>
+  <p> She is a Jindo dog a type of Korean traditional dog. You can see more information on this <a href = "https://www.akc.org/dog-breeds/jindo/" target="_blank">website</a>.</p>
 
   <img src="Bockgil.jpg" alt="not photo yet" width="200" height="200" />
 
